--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/aurelIkama/test_packages/issues"
   },
-  "homepage": "https://github.com/aurelIkama/test_packages#readme"
+  "homepage": "https://github.com/aurelIkama/test_packages#readme",
+  "publishConfig": {
+    "@aurelIkama:registry": "https://npm.pkg.github.com"
+  }
 }
